--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm start --prefix frontend",
     "server": "nodemon backend/server",
-    "start": "nodemon --watch backend --exec node backend/server.js"
+    "start": "node server.js",
+    "dev": "concurrently \" npm start \" \"npm run client\" "
   },
   "keywords": [],
   "author": "",
