--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm start --prefix frontend",
     "server": "nodemon backend/server",
-    "start": "node server.js",
+    "start": "node backend/server.js",
     "dev": "concurrently \" npm start \" \"npm run client\" "
   },
   "keywords": [],
