--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently \" npm start \" \"npm run client\" "
   },
   "keywords": [],
-  "author": "",
+  "author": "Ankit",
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
